<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PasswordLocker</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_category">Category</string>
    
    <!-- 首页 -->
    <string name="set_enter_password">Set Login Password</string>
    <string name="enter_password">enter password</string>
    <string name="confirm_enter_password">confirm password</string>
    <string name="login">login</string>
    
    <!-- 设置 -->
    <string name="confirm">confirm</string>
    
    <!-- singleInput -->
    <string name="date_format">%3$d.%2$d.%1$d</string>
	<string name="page_number">%1$d/%2$d</string>
	<string name="next_step">Next step</string>
	<string name="password_set">Set Login Password</string>
	<string name="password_confirm">Confirm Login Password</string>
	<string name="password_error"></string>
	<string name="password_details">This password is used to confirm your identity to open the app.</string>
    <string name="password_login">Login PasswordLocker</string>
    <string name="please_choose_operation">please choose operation</string>
    <string name="edit">edit</string>
    <string name="delete">delete</string>
    <string name="add_category">Add Category</string>
    <string name="input_category_name">input category name</string>
    <string name="add">Add</string>
    <string name="choose_caterogy">Choose Category</string>
	
</resources>
