<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:gravity="center"
        android:textSize="16sp"
        android:background="@color/green_main"
        android:text="@string/please_choose_operation"/>
    <TextView 
        android:id="@+id/edit_the_item_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/edit"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#000000"/>
    <TextView
        android:id="@+id/delete_the_item_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/delete"/>

</LinearLayout>
