<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/add_category"
        android:gravity="center"
        android:textSize="16sp"
        android:background="@color/green_main"/>
    <EditText
        android:id="@+id/input_category_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:padding="15dp"
        android:hint="@string/input_category_name"
        android:singleLine="true"/>
    <com.gc.materialdesign.views.ButtonFlat
                android:id="@+id/add_category_commit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_gravity="center_horizontal"
                android:background="@color/green_main"
                android:text="@string/add"
                android:textColor="#ffffff" />

</LinearLayout>
